fixed alignment of content in main viewer: canvases no longer overflow the viewer area

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 #root {
   position: fixed;
   height: 100%;
-  width: 1300px;
+  width: 100%;
   top: 0;
   left: 0;
   overflow-x: scroll;
@@ -81,13 +81,9 @@ a {
 
 .annotationLayer {
   position: absolute;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #ddd;
+  border: 1px solid rgba(0, 0, 0, 0.125);
   top: 0px;
   left: 0px;
-  width: 100%;
-  height: 100%;
   z-index: 10;
 }
 
